fixed overflow problem

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 
 
-
+html{
+  overflow-x: hidden;
+}
 
 
 .leaflet-container {
